--- a/view.html
+++ b/view.html
@@ -51,6 +51,12 @@
 			bottom: -400px;
 			width: 500px;
 		}
+
+		#result{
+		    position: relative;
+			left: 20%;
+			top: 40%;
+		}
 	</style>
 </head>
 <body>
@@ -59,6 +65,7 @@
 	    <div class="barra2"/>
 	</div> 
 	<div class="caixa"/>
+	<label id="result">Massa da Caixa = *Não Calculada</label>
 	<div class = "data">
 		<form>
 		  <div class="form-group">
@@ -73,11 +80,17 @@
 		    <label for="massa">Massa da Caixa</label>
 		    <input type="text" class="form-control" id="massa" aria-describedby="Massa da Caixa" placeholder="Digite a Massa da Caixa">
 		  </div>
-		  <button type="calcular" class="btn btn-primary">Calcular</button>
+		  <button type="button" class="btn btn-primary" onclick="calculateMass()">Calcular</button>
 		</form>
 	</div>
-</body>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script type="text/javascript">
+		function calculateMass() {
+			var anguloBarraA = document.getElementById('barAngle1')
+			var anguloBarraB = document.getElementById('barAngle2')
+	  		var massaCaixa = document.getElementById('massa');
+	  		var forcaEstatica = document.getElementById('result');
+	  		forcaEstatica.textContent = "Massa da Caixa = " + (anguloBarraA.value * anguloBarraB.value * massaCaixa.value); 
+	  }
+	</script>
+</body>	
 </html>
